@@ -1,3 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ip4r-1.03.tar.gz 18294 RMD160 611ef4caf2ab98ce898b04a088626720f22ca220 SHA1 cb2ec9a3f0639f3f1ed6531de54a927efc68e23e SHA256 0f972382d9a0c2aa5b1025cacb5ca1a98bcea3a33821b723f3041ee82b0a80f2
-EBUILD postgresql-ip4r-1.03.ebuild 658 RMD160 2aee14c77d0d044f480cdb835060d757ec370a6f SHA1 7b18fde33fb0ac9223809440021e7c805a199fa6 SHA256 5562a3e3bee8b978babda0d122bbe59bcec5b9b58f587c534164aa5899f18b8d
-MISC ChangeLog 201 RMD160 5a56f96c84ac9b8d9d158ddc79a1eadc1d26b152 SHA1 c922a9c3b21a8923ed9df4d020bfd1d3c6272f10 SHA256 2048596d002cf17adf010f9f6d51d8c5b7ab748167a233ce1fb1d1ec956f546b
+EBUILD postgresql-ip4r-1.03.ebuild 657 RMD160 6503ed8d9b79594119048115615f835518dd4e9a SHA1 9c620d238bbe273e1a3413361acc6e36c3865bf9 SHA256 7e132bbdfc5d14e6fa2843219cdb55c139462b1dee00988c8e099e13223047c1
+MISC ChangeLog 312 RMD160 c83e6fca0cc09107b6995bdf80dc5bd5a8197e86 SHA1 7985126db372a8fa172c9c9fb0234dc35e165379 SHA256 01d6805ad45b7d4650f6882dbddfadee4d5f740e467b364240bf4c8a0303f172
+MISC metadata.xml 479 RMD160 f7b4cf7ae0d060dda2268f7a479606656ba74261 SHA1 7d08c05c32d18930fc7a4bc23c2cee2ce9b5d78f SHA256 b4a73a23107ef86a4ba952d4addec06cbbdf646509eadf219a9e4a20d4e5678b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlDYzQW+hXSf0t0IRApNuAKCraSu19BbvUmVfqIjutCmv9Hc3pACfeuHf
+kfBcw4PdL8stsUBb3MJFAx0=
+=Ki6i
+-----END PGP SIGNATURE-----
